@@ -1,7 +1,8 @@
 Changes
 lib/CGI/Fast.pm
 Makefile.PL
-MANIFEST			This list of files
+MANIFEST
 README
 t/001_basic.t
 t/002_import.t
+t/003_env_pollution.t
