@@ -13,8 +13,9 @@ WriteMakefile(
      'PREREQ_PM' => {
        'if'          => 0, # core in 5.6.2 and later, for deprecate.pm
        'Test::More'  => 0.98, # Ideally, this could be just a "test_requires". Version requirement is for 'subtest' support.
+       'Test::Deep'  => 0.11,
        'File::Spec'  => .82,
-       'CGI'         => 3.65_02,
+       'CGI'         => 4.00,
        'FCGI'        => 0.67,
     },
     test => { TESTS => 't/*.t' },
@@ -34,7 +35,10 @@ WriteMakefile(
                 no_index => {directory => [qw/t/]},
             },
             META_ADD => {
-                build_requires     => {},
+                build_requires     => {
+                    'Test::More'      => 0,
+                    'Test::Deep'      => 0.11,
+                },
                 configure_requires => {}
             },
         )
